fixed overflow in code boxes

--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,10 @@ p { margin: 1em 0; }
 a         { color: #333; }
 
 
+pre {
+  overflow: auto;
+}
+
 /*****************************************************************************/
 /*
 /* Home
